--- a/packages.yml
+++ b/packages.yml
@@ -10,3 +10,6 @@ packages:
 
   - package: tnightengale/dbt_meta_testing
     version: 0.3.6
+
+  - package: dbt-labs/audit_helper
+    version: 0.12.0
