Updated expression: "o_totalprice > 10000000"

--- a/models/staging/sources.yml
+++ b/models/staging/sources.yml
@@ -34,7 +34,7 @@ models:
               strictly: True
     data_tests:
       - dbt_utils.expression_is_true:
-          expression: "o_totalprice > 1000"
+          expression: "o_totalprice > 10000000"
           config:
             severty: warn
             error_if: ">17000"
