update to sources.yml file

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -42,5 +42,12 @@ sources:
       +materialized: table
     intermediate:
       +materialized: table
-      
+
+data_tests:
+  stg_orders:
+    +severty: warn
+    +store_failures: True
+
+
+
     
