--- a/.github/workflows/dbt-test.yml
+++ b/.github/workflows/dbt-test.yml
@@ -1,3 +1,97 @@
+name: dbt Deployment Pipeline
+
+on:
+  push:
+    branches:
+      - dev     # Run on dev branch
+      - staging # Run on staging branch
+      - main    # Run on main (prod)
+  workflow_dispatch:  # Allows manual trigger from GitHub interface
+
+jobs:
+  run-dbt:
+    runs-on: ubuntu-latest
+
+    steps:
+      # Check out the repository
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      # Set up Python (for dbt)
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: "3.x"  # Specify Python version
+
+      # Install dbt and adapter (replace dbt-snowflake with your adapter)
+      - name: Install dbt
+        run: |
+          python -m pip install --upgrade pip
+          pip install dbt-core dbt-snowflake  # Use the adapter you need
+
+      # Set up environment variables
+      - name: Set environment variables for dbt profile
+        env:
+          DBT_PROFILES_DIR: ./profiles  # Point to the profiles.yml directory
+        run: echo "Set environment variables"
+
+      # Conditionally set environment variables based on the branch
+      - name: Set environment for branch
+        if: github.ref == 'refs/heads/dev'
+        env:
+          DBT_TARGET: dev
+          SNOWFLAKE_ROLE: ACCOUNTADMIN
+          SNOWFLAKE_DATABASE: DBT_DB
+          SNOWFLAKE_WAREHOUSE: DBT_WH
+          SNOWFLAKE_SCHEMA: DEV_GTS_SCHEMA
+        run: echo "Running in dev environment"
+
+      - name: Set environment for staging
+        if: github.ref == 'refs/heads/staging'
+        env:
+          DBT_TARGET: staging
+          SNOWFLAKE_ROLE: ACCOUNTADMIN
+          SNOWFLAKE_DATABASE: DBT_DB
+          SNOWFLAKE_WAREHOUSE: DBT_WH
+          SNOWFLAKE_SCHEMA: STAGING_GTS_SCHEMA
+        run: echo "Running in staging environment"
+
+      - name: Set environment for production
+        if: github.ref == 'refs/heads/main'
+        env:
+          DBT_TARGET: prod
+          SNOWFLAKE_ROLE: ACCOUNTADMIN
+          SNOWFLAKE_DATABASE: DBT_DB
+          SNOWFLAKE_WAREHOUSE: DBT_WH
+          SNOWFLAKE_SCHEMA: PROD_GTS_SCHEMA
+        run: echo "Running in production environment"
+
+      # Run dbt commands
+      - name: Run dbt commands
+        run: |
+          dbt deps  # Install dbt dependencies
+          dbt seed  # Load seeds (optional)
+          dbt test --target $DBT_TARGET  # Run tests for the specified environment
+          dbt run --target $DBT_TARGET  # Run models for the specified environment
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 name: dbt Test Workflow
 
 on:
