--- a/.github/workflows/prod_deploy_pipeline.yml
+++ b/.github/workflows/prod_deploy_pipeline.yml
@@ -9,70 +9,55 @@ on:
       - main
 
 jobs:
-  dbt-test:
+  run-dbt:
     runs-on: ubuntu-latest
 
     steps:
+      # Check out the repository
       - name: Checkout code
         uses: actions/checkout@v2
 
+      # Set up Python (for dbt)
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: 3.9
+          python-version: "3.x"  # Specify Python version
 
-      - name: Install dbt and dependencies
+      # Install dbt and adapter (replace dbt-snowflake with your adapter)
+      - name: Install dbt
         run: |
           python -m pip install --upgrade pip
-          pip install dbt-core dbt-snowflake  # Update with your adapter (e.g., dbt-postgres, dbt-bigquery)
+          pip install dbt-core dbt-snowflake  # Use the adapter you need
 
-      - name: Set up the dbt profile
-        run: |
-          mkdir -p ~/.dbt
-          echo "$DBT_PROFILE" > ~/.dbt/profiles.yml
+      # Set up environment variables
+      - name: Set environment variables for dbt profile
         env:
-          DBT_PROFILE: ${{ secrets.DBT_PROFILE }}
+          DBT_PROFILES_DIR: ./profiles  # Point to the profiles.yml directory
+        run: echo "Set environment variables"
 
       # Conditionally set environment variables based on the branch
-      - name: Set environment for branch
+      - name: Set environment for dev branch
         if: github.ref == 'refs/heads/dev'
+        run: echo "Running in dev environment"
         env:
           DBT_TARGET: dev
-          SNOWFLAKE_ROLE: ACCOUNTADMIN
-          SNOWFLAKE_DATABASE: DBT_DB
-          SNOWFLAKE_WAREHOUSE: DBT_WH
-          SNOWFLAKE_SCHEMA: DEV_GTS_SCHEMA
-        run: echo "Running in dev environment"
 
-      - name: Set environment for staging
+      - name: Set environment for staging branch
         if: github.ref == 'refs/heads/staging'
+        run: echo "Running in staging environment"
         env:
           DBT_TARGET: staging
-          SNOWFLAKE_ROLE: ACCOUNTADMIN
-          SNOWFLAKE_DATABASE: DBT_DB
-          SNOWFLAKE_WAREHOUSE: DBT_WH
-          SNOWFLAKE_SCHEMA: STAGING_GTS_SCHEMA
-        run: echo "Running in staging environment"
 
-      - name: Set environment for production
+      - name: Set environment for production branch
         if: github.ref == 'refs/heads/main'
+        run: echo "Running in production environment"
         env:
           DBT_TARGET: prod
-          SNOWFLAKE_ROLE: ACCOUNTADMIN
-          SNOWFLAKE_DATABASE: DBT_DB
-          SNOWFLAKE_WAREHOUSE: DBT_WH
-          SNOWFLAKE_SCHEMA: PROD_GTS_SCHEMA
-        run: echo "Running in production environment"
 
       # Run dbt commands
-      - name: Run dbt deps
-        run: dbt deps
-
-      - name: Run dbt seed
-        run: dbt seed
-
-      - name: Run dbt tests
-        run: dbt test
-
-      - name: Run dbt run
-        run: dbt run
+      - name: Run dbt commands
+        run: |
+          dbt deps  # Install dbt dependencies
+          dbt seed  # Load seeds (optional)
+          dbt run --target $DBT_TARGET  # Run models for the specified environment
+          dbt test --target $DBT_TARGET  # Run tests for the specified environment
