Updated the deployment pipeline files

--- a/.github/workflows/prod_deploy_pipeline.yml
+++ b/.github/workflows/prod_deploy_pipeline.yml
@@ -36,7 +36,7 @@ jobs:
         run: echo "Set environment variables"
 
       # Conditionally set environment variables based on the branch
-      - name: Set environment for branch
+      - name: Set environment for dev
         if: github.ref == 'refs/heads/dev'
         env:
           DBT_TARGET: dev
