--- a/.github/workflows/prod_deploy_pipeline.yml
+++ b/.github/workflows/prod_deploy_pipeline.yml
@@ -32,7 +32,7 @@ jobs:
       # Set up environment variables
       - name: Set environment variables for dbt profile
         env:
-          DBT_PROFILES_DIR: ./profiles  # Point to the profiles.yml directory
+          DBT_PROFILES_DIR: ./  # Point to the profiles.yml directory
         run: echo "Set environment variables"
 
       # Conditionally set environment variables based on the branch
