--- a/.github/workflows/prod_deploy_pipeline.yml
+++ b/.github/workflows/prod_deploy_pipeline.yml
@@ -4,83 +4,96 @@ on:
   push:
     branches:
       - prod
-        staging
-        dev
+      - staging
+      - dev
   pull_request:
     branches:
       - prod
-        staging
-        dev
-  workflow_dispatch:  # Allows manual trigger from GitHub interface
+      - staging
+      - dev
+  workflow_dispatch:
 
 jobs:
   run-dbt:
     runs-on: ubuntu-latest
 
     steps:
-      # Check out the repository
       - name: Checkout code
         uses: actions/checkout@v2
 
-      # Set up Python (for dbt)
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: "3.x"  # Specify Python version
+          python-version: "3.x"
 
-      # Install dbt and adapter (replace dbt-snowflake with your adapter)
       - name: Install dbt
         run: |
           python -m pip install --upgrade pip
-          pip install dbt-core dbt-snowflake  # Use the adapter you need
+          pip install dbt-core dbt-snowflake
 
-      - name: Set up the dbt profile
+      - name: Create profiles.yml
         run: |
           mkdir -p ~/.dbt
-          echo "$DBT_PROFILE" > ~/.dbt/profiles.yml
-        env:
-          DBT_PROFILE: ${{ secrets.DBT_PROFILE }}
+          echo "
+          snowflake_profile:
+            target: dev
+            outputs:
+              dev:
+                type: snowflake
+                account: '${{ secrets.SNOWFLAKE_ACCOUNT }}'
+                user: '${{ secrets.SNOWFLAKE_USER }}'
+                password: '${{ secrets.SNOWFLAKE_PASSWORD }}'
+                role: '${{ secrets.SNOWFLAKE_ROLE }}'
+                database: '${{ secrets.SNOWFLAKE_DATABASE }}'
+                warehouse: '${{ secrets.SNOWFLAKE_WAREHOUSE }}'
+                schema: dev_gts_schema
+                threads: 4
+                client_session_keep_alive: False
+                query_tag: dbt_dev
+                authenticator: snowflake
+              staging:
+                type: snowflake
+                account: '${{ secrets.SNOWFLAKE_ACCOUNT }}'
+                user: '${{ secrets.SNOWFLAKE_USER }}'
+                password: '${{ secrets.SNOWFLAKE_PASSWORD }}'
+                role: '${{ secrets.SNOWFLAKE_ROLE }}'
+                database: '${{ secrets.SNOWFLAKE_DATABASE }}'
+                warehouse: '${{ secrets.SNOWFLAKE_WAREHOUSE }}'
+                schema: staging_gts_schema
+                threads: 4
+                client_session_keep_alive: False
+                query_tag: dbt_staging
+                authenticator: snowflake
+              prod:
+                type: snowflake
+                account: '${{ secrets.SNOWFLAKE_ACCOUNT }}'
+                user: '${{ secrets.SNOWFLAKE_USER }}'
+                password: '${{ secrets.SNOWFLAKE_PASSWORD }}'
+                role: '${{ secrets.SNOWFLAKE_ROLE }}'
+                database: '${{ secrets.SNOWFLAKE_DATABASE }}'
+                warehouse: '${{ secrets.SNOWFLAKE_WAREHOUSE }}'
+                schema: prod_gts_schema
+                threads: 4
+                client_session_keep_alive: False
+                query_tag: dbt_prod
+                authenticator: snowflake
+          " > ~/.dbt/profiles.yml
 
-      # Conditionally set environment variables based on the branch
-      - name: Set environment for dev branch
-        if: github.ref == 'refs/heads/dev'
-        run: echo "Running in dev environment"
-        env:
-          DBT_TARGET: ${{ secrets.DBT_DEV_ENV }}
-
-      - name: Set environment for staging branch
-        if: github.ref == 'refs/heads/staging'
-        run: echo "Running in staging environment"
-        env:
-          DBT_TARGET: ${{ secrets.DBT_STG_ENV }}
-
-      - name: Set environment for production branch
-        if: github.ref == 'refs/heads/main'
-        run: echo "Running in production environment"
-        env:
-          DBT_TARGET: ${{ secrets.DBT_MY_ENV }}
+      # Set environment variable based on branch
+      - name: Set environment variable for branch
+        run: |
+          if [ "${GITHUB_REF##*/}" == "dev" ]; then
+            echo "DBT_TARGET=dev" >> $GITHUB_ENV
+          elif [ "${GITHUB_REF##*/}" == "staging" ]; then
+            echo "DBT_TARGET=staging" >> $GITHUB_ENV
+          elif [ "${GITHUB_REF##*/}" == "prod" ]; then
+            echo "DBT_TARGET=prod" >> $GITHUB_ENV
+          fi
 
       # Run dbt commands
-      - name: Run dbt commands for dev
-        if: github.ref == 'refs/heads/dev'
+      - name: Run dbt commands
         run: |
-          dbt deps  # Install dbt dependencies
-          dbt seed  # Load seeds (optional)
-          dbt test --target dev  # Run tests for the specified environment
-          dbt run --target dev  # Run models for the specified environment
-
-      - name: Run dbt commands for staging
-        if: github.ref == 'refs/heads/staging'
-        run: |        
-          dbt deps  # Install dbt dependencies
-          dbt seed  # Load seeds (optional)
-          dbt test --target staging  # Run tests for the specified environment
-          dbt run --target staging  # Run models for the specified environment
-          
-      - name: Run dbt commands for prod
-        if: github.ref == 'refs/heads/main'
-        run: |         
-          dbt deps  # Install dbt dependencies
-          dbt seed  # Load seeds (optional)
-          dbt test --target prod  # Run tests for the specified environment
-          dbt run --target prod  # Run models for the specified environment
+          dbt deps
+          dbt seed
+          dbt test --target $DBT_TARGET
+          dbt run --target $DBT_TARGET
